deploy/manifests/01-namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: classcache-system
